gitops/clusters/prod/apps/empulse-music-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: empulse-music
  namespace: empulse-music
  labels:
    app: empulse-music
    environment: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: empulse-music
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
